--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "name": "node.js",
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "name": "backend",
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
