--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,10 @@
 {
   "version": 2,
-  "name": "smart-excuse-generator-backend",
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/index.js"
     }
   ]
 }
