--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@huggingface/inference": "^2.8.1",
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
-    "@langchain/openai": "^0.5.11",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.23.0",
     "langchain": "^0.3.27",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
