--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,13 @@
     "@langchain/core": "^0.3.57",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "groq-sdk": "^0.23.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
