--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "groq-sdk": "^0.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "toaster": "^0.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
