--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "groq-sdk": "^0.23.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-auth0": "^1.4.4",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
