--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-openid-connect": "^2.18.1",
+    "express-session": "^1.18.1",
     "groq-sdk": "^0.23.0",
+    "passport": "^0.7.0",
+    "passport-auth0": "^1.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8",
     "toaster": "^0.1.2"
   },
