--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
@@ -28,7 +29,9 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "path": "^0.12.7",
