--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "firebase-admin": "^12.7.0",
     "groq-sdk": "^0.23.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
