--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-openid-connect": "^2.18.1",
     "express-session": "^1.18.1",
+    "firebase": "^11.9.1",
     "groq-sdk": "^0.23.0",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
